--- a/plot_gaze_data/Task2_Metric_Analysis.ipynb
+++ b/plot_gaze_data/Task2_Metric_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "6bf24989",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "ae3afa8a",
    "metadata": {},
    "outputs": [
@@ -876,7 +876,7 @@
        "59    1.000000    1.000000    0.779033  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "f316a052",
    "metadata": {},
    "outputs": [],
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "785183f9",
    "metadata": {},
    "outputs": [],
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "06f23985",
    "metadata": {},
    "outputs": [],
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "0079eaaa",
    "metadata": {},
    "outputs": [],
@@ -1055,12 +1055,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "c9ae937f",
+   "execution_count": null,
+   "id": "84a791e5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gaze_data = dataframes[2]\n",
+    "### gaze_data = dataframes[2]\n",
     "#PercFixInside(gaze_data)\n",
     "#NFix(gaze_data, 0.05, False)\n",
     "#ConvergTime(gaze_data)"
