--- a/gaze_data_analysis/Task1_Metric_Analysis.ipynb
+++ b/gaze_data_analysis/Task1_Metric_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 2,
    "id": "6bf24989",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 3,
    "id": "ae3afa8a",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
        "\"folder_path = 'SaliencyData/Task1'\\n\\ndef load_data(file):\\n    file_path = os.path.join(folder_path, file)\\n    data = pd.read_csv(file_path, delimiter=';', usecols=['GazeTime', 'Region', 'Target', 'PosX', 'PosY', 'PosZ', 'PlayerPosX', 'PlayerPosY', 'PlayerPosZ', 'LightIntensity', 'Velocity'])\\n    data = data[~((data['PosX'] == 0) & (data['PosY'] == 0) & (data['PosZ'] == 0))\\n\\n    if len(data) <= 1:  # The data contains only a header\\n        return None\\n\\n    # Get the unique regions\\n    regions = data['Region'].unique()\\n\\n    # Skip the first region\\n    for region in regions[1:]:\\n        # Get the index of the first row of the current region\\n        first_row_index = data[data['Region'] == region].index[0]\\n        # Drop the first row of the current region\\n        data = data.drop(first_row_index)\\n\\n    # Normalize position data using Min-Max normalization\\n    pos_columns = ['PosX', 'PosY', 'PosZ', 'PlayerPosX', 'PlayerPosY', 'PlayerPosZ', 'LightIntensity', 'Velocity']\\n    for column in pos_columns:\\n        data[column] = (data[column] - data[column].min()) / (data[column].max() - data[column].min())\\n\\n    return data\\n\\n# Create a list to store the dataframes\\ndataframes = [df for df in (load_data(file) for file in os.listdir(folder_path) if file.endswith('.csv')) if df is not None]\\nos.listdir(folder_path)\\ndataframes[0]\""
       ]
      },
-     "execution_count": 192,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 4,
    "id": "9647d1a8",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 5,
    "id": "6436323c",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 6,
    "id": "c0755af9",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 7,
    "id": "a6b14c44",
    "metadata": {},
    "outputs": [],
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 8,
    "id": "f316a052",
    "metadata": {},
    "outputs": [
@@ -307,7 +307,7 @@
        "6               None  1.740877  100.000000       3"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 9,
    "id": "785183f9",
    "metadata": {},
    "outputs": [],
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 10,
    "id": "a23cfc44",
    "metadata": {},
    "outputs": [
@@ -482,7 +482,7 @@
        "5       3               None     0"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 11,
    "id": "06f23985",
    "metadata": {},
    "outputs": [
@@ -553,7 +553,7 @@
        "2      2  Transparency(Min)         0.199088"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 12,
    "id": "0079eaaa",
    "metadata": {},
    "outputs": [],
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 13,
    "id": "29269722",
    "metadata": {},
    "outputs": [
@@ -668,7 +668,7 @@
        "3       2  Transparency(Min)   0.989266"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 14,
    "id": "a2749d82",
    "metadata": {},
    "outputs": [
@@ -1113,7 +1113,7 @@
        "14       NaN       NaN      NaN       NaN       NaN       NaN  "
       ]
      },
-     "execution_count": 203,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 15,
    "id": "172b897e",
    "metadata": {},
    "outputs": [
@@ -1275,7 +1275,7 @@
        "14       3              White  10.887067   12.685901"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1303,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 16,
    "id": "85f01ba7",
    "metadata": {},
    "outputs": [
@@ -1741,10 +1741,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 17,
    "id": "7d05a9e7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Target</th>\n",
+       "      <th>ConvergenceTime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Size(Low)</td>\n",
+       "      <td>0.216197</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Size(Max)</td>\n",
+       "      <td>0.387103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Size(Mid)</td>\n",
+       "      <td>0.343099</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Size(Min)</td>\n",
+       "      <td>0.290967</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Transparency(Low)</td>\n",
+       "      <td>0.508463</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Transparency(Max)</td>\n",
+       "      <td>0.152169</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Transparency(Mid)</td>\n",
+       "      <td>0.221886</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Transparency(Min)</td>\n",
+       "      <td>0.215935</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>0.223695</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Blue</td>\n",
+       "      <td>0.458197</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Red</td>\n",
+       "      <td>0.431286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>3</td>\n",
+       "      <td>White</td>\n",
+       "      <td>0.512388</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Region             Target  ConvergenceTime\n",
+       "0        1          Size(Low)         0.216197\n",
+       "1        1          Size(Max)         0.387103\n",
+       "2        1          Size(Mid)         0.343099\n",
+       "3        1          Size(Min)         0.290967\n",
+       "4        2  Transparency(Low)         0.508463\n",
+       "5        2  Transparency(Max)         0.152169\n",
+       "6        2  Transparency(Mid)         0.221886\n",
+       "7        2  Transparency(Min)         0.215935\n",
+       "8        3              Black         0.223695\n",
+       "9        3               Blue         0.458197\n",
+       "10       3                Red         0.431286\n",
+       "11       3              White         0.512388"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def overall_average_convergence_time(dataframes):\n",
     "    # Create a list to store the convergence time dataframes\n",
@@ -1766,7 +1890,8 @@
     "    return all_data\n",
     "\n",
     "# usage\n",
-    "overall_avg_convergence_times = overall_average_convergence_time(dataframes)"
+    "overall_avg_convergence_times = overall_average_convergence_time(dataframes)\n",
+    "overall_avg_convergence_times"
    ]
   },
   {
